refactor: minor cleanup and UX refinements

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <h1>OCTANEBREW</h1>
+    <a href="/" style="text-decoration: none; color: inherit;"><h1>OCTANEBREW</h1></a>
     <div class="subtitle">PLATFORM // <span class="blink">ONLINE</span></div>
 </header>
 
@@ -29,7 +29,7 @@
     <div class="control-panel">
         <span class="prompt">$ stream --connect</span>
         <input type="text" id="stream-key-input" placeholder="stream_key" autocomplete="off">
-        <button onclick="loadStream()" class="btn">EXECUTE</button>
+        <button onclick="loadStream()" class="btn">SUBMIT</button>
     </div>
 
     <!-- Infrastructure Grid -->
