feat: Added link preview meta and updated responsiveness of landing page

--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OCTANEBREW // PLATFORM HUB</title>
+    
+    <!-- Open Graph / Link Preview Metadata -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://octanebrew.dev/">
+    <meta property="og:title" content="OCTANEBREW // DISTRIBUTED PLATFORM HUB">
+    <meta property="og:description" content="High-performance administrative command center and shared infrastructure backbone for the OctaneBrew ecosystem. Engineered for AI intelligence, streaming, and multi-tenant scale.">
+    <meta property="og:image" content="https://octanebrew.dev/og-image.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
